[project]
name = "monta"
version = "0.0.8"
description = "A comprehensive suite of applications tailored for the transportation and logistics sector."
readme = "README.md"
authors = [{ name = "Wolfred", email = "wolfred@monta.io" }]
maintainers = [{ name = "Wolfred", email = "wolfred@monta.io" }]
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]

license = { text = "BSL" }
requires-python = ">=3.11"

[tool.isort]
profile = "black"
skip = ["venv", ".git", "migrations", ".venv", "client", ".tox"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
  | \.git
  | client
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.vscode
  | \.tox
  | venv
  | \.docker
  | \.github
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
ignore = ["E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "client",
    "node_modules",
    "venv",
]

[tool.django-stubs]
django_settings_module = "backend.settings"
ignore_missing_settings = true
ignore_missing_model_attributes = true

[tool.flake8]
show-source = true
statistics = false
doctests = true
enable-extensions = "G"
docstring-style = "google"
exclude = ["tests", "migrations", "__pycache__", "venv", ".venv"]
max-line-length = 100
max-complexity = 6
ignore = ["E501", "W503", "F721", "C901"]

[tool.autoflake]
imports = ["django", "requests", "urllib3"]
exclude = [
    "rvenv/*",
    "*/migrations/*",
    "*/tests/*",
    "*/settings/*",
    "*/urls.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/apps.py",
]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: marks tests as serial (deselect with '-m \"not serial\"')",
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "default::DeprecationWarning:__main__",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
]

[tool.bandit]
exclude_dirs = [
    "venv",
    ".venv",
    "node_modules",
    "client",
    "migrations",
    ".tox",
    ".git",
    ".github",
    ".vscode",
    ".docker",
    "buck-out",
    "build",
    "dist",
    "tests",
    "management",
]
