[project]
name = "transport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.2",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "flask>=3.0.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
    "torchinfo>=1.8.0",
    "mlflow>=3.1.4",
    "torch>=2.5.1",
    "types-tqdm>=4.67.0.20250516",
]
